# gemini2api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SPONSORS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
api/: qr-config.json
app/: config.py  main.py
app/core/: account_pool.py  api_forwarder.py  api_key_store.py  auth.py  file_upload.py  gem_mapping.py  gemini_client.py  limiter.py  stream.py  usage_metrics.py  usage_stats.py  usage_timer.py
app/models/: claude.py  gemini.py  openai.py
app/routers/: admin.py  api_keys.py  claude.py  gemini.py  gems.py  openai.py  research.py  settings.py  usage_stats.py
app/utils/: atomic_io.py  net_guard.py  prompt.py  tools.py
docs/en/: API.md  DEPLOY.md  README.md  SPONSORS.md  USAGE.md
docs/ja/: API.md  DEPLOY.md  README.md  SPONSORS.md  USAGE.md
docs/ko/: API.md  README.md  SPONSORS.md  USAGE.md
docs/zh-CN/: API.md  DEPLOY.md  README.md  USAGE.md
docs/zh-TW/: API.md  DEPLOY.md  README.md  SPONSORS.md  USAGE.md
refresher/: Dockerfile  refresher.py
static/: index.html
static/app/: api-keys.js  app.js  base.css  component-loader.js  gems.js  i18n.js  language-switcher.js  mobile.css  settings.js  usage-chart.js  utils.js
static/components/: header.css  header.html  section-accounts.html  section-api-keys.css  section-api-keys.html  section-dashboard.css  section-dashboard.html  section-gems.css  section-gems.html  section-logs.css  section-logs.html  sidebar.html  (+6 more)
tests/: conftest.py
(+14 files in other folders)
