# Tooling configuration for Gemini2API.
# NOTE: intentionally NO [build-system]/[project] table — this repo is run from
# source (Dockerfile installs requirements.txt), not packaged/installed. This
# file only carries dev-tool config (pytest / ruff) and has zero runtime impact.

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
# Put the repo root on sys.path so `import app...` resolves (namespace package).
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [".venv", "venv", "env", "build", "dist", "__pycache__", "refresher"]

[tool.ruff.lint]
# Conservative first gate: real correctness errors only (syntax + undefined
# names + broken control flow), so legacy style does not block CI. Expand
# progressively in follow-ups (e.g. add "F401", "I", "B", "UP").
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.lint.per-file-ignores]
# Baseline: one pre-existing, UNREACHABLE dead block at app/routers/admin.py:251-252
# (after an early return; references undefined `threading`/`_update`). Owned by the
# routers/admin.py maintainer — remove this ignore once that dead code is deleted.
"app/routers/admin.py" = ["F821"]
